--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/dependencies/kinetic-java"]
 	path = tests/dependencies/kinetic-java
-	url = git@github.com:Kinetic/kinetic-java.git
+	url = https://github.com/Kinetic/kinetic-java.git
