--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
         "protocol"
     ],
     "dependencies": {
-        "protobufjs": "^4.0.0",
-        "winston": "^1.1.0"
+        "protobufjs": "^4.0.0"
     },
     "devDependencies": {
         "babel": "^5.8.23",
         "babel-eslint": "^4.1.3",
         "eslint": "^1.5.1",
         "eslint-config-airbnb": "^0.0.9",
-        "mocha": "^2.3.3"
+        "mocha": "^2.3.3",
+        "mocha-logger": "1.0.4"
     },
     "scripts": {
         "lint": "eslint $(git ls-files './lib/*.js' './tests/*/*.js')",
